--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </button>
 
         <div class="collapse navbar-collapse" id="header">
-            <ul class="navbar-nav mr-auto">
+            <ul class="navbar-nav mr-auto" id="mytitle">
                 <li class="nav-item active">
                   <h1>Birla Amusement Park</h1>
                 </li>
